# companies-house-neo4j-python

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
src/: companies_house_api.py  config.py  graph.py
